# team-agents

./: README.md
myenv/: pyvenv.cfg
papa's_crew/: README.md  pyproject.toml
papa's_crew/src/papa's_crew/: crew.py  main.py
papa_crew/: README.md  pyproject.toml  sys
papa_crew/src/papa_crew/: crew.py  main.py
papa_crew/src/papa_crew/config/: agents.yaml  tasks.yaml
papa_crew/src/papa_crew/tools/: custom_tool.py
papa_nex_agents/: README.md  pyproject.toml
papa_nex_agents/src/papa_nex_agents/: main.py
papa_nex_agents/src/papa_nex_agents/config/: agents.yaml
papa_nex_agents/src/papa_nex_agents/tools/: custom_tool.py
team_crew/: README.md  pyproject.toml
team_crew/src/team_crew/: crew.py  main.py
team_crew/src/team_crew/config/: agents.yaml  tasks.yaml
team_crew/src/team_crew/tools/: custom_tool.py
