[project]
name = "papa's_crew"
version = "0.1.0"
description = "papa's_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
papa's_crew = "papa's_crew.main:run"
run_crew = "papa's_crew.main:run"
train = "papa's_crew.main:train"
replay = "papa's_crew.main:replay"
test = "papa's_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
