[project]
name = "papa_crew"
version = "0.1.0"
description = "papa_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
papa_crew = "papa_crew.main:run"
run_crew = "papa_crew.main:run"
train = "papa_crew.main:train"
replay = "papa_crew.main:replay"
test = "papa_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
