[project]
name = "papa_nex_agents"
version = "0.1.0"
description = "papa_nex_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
papa_nex_agents = "papa_nex_agents.main:run"
run_crew = "papa_nex_agents.main:run"
train = "papa_nex_agents.main:train"
replay = "papa_nex_agents.main:replay"
test = "papa_nex_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
