[project]
name = "team_crew"
version = "0.1.0"
description = "team-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
team_crew = "team_crew.main:run"
run_crew = "team_crew.main:run"
train = "team_crew.main:train"
replay = "team_crew.main:replay"
test = "team_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
